# ModeleXXL

./: Agent.cpp  Agent.h  CMakeLists.txt  Competition.cpp  Competition.h  Process.cpp  Process.h  README.md  extracor.py  main.cpp
Sprawko/szablon-sprawozdania/: _tytulowa.tex  sprawozd.aux  sprawozd.bib  sprawozd.out  sprawozd.tex
